--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -1,2 +1,7 @@
 // Fonts here
 // see more: https://github.com/vedees/webpack-template/blob/master/README.md#import-js-files
+
+@font-face {
+  font-family: "Tondo Corp";
+  src: url('/assets/fonts/tondo-corp/TondoCorp-Regular.woff');
+}
