--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -1,35 +1,38 @@
 // Font
-$mainFont                : 'Montserrat', Helvetica, Arial, sans-serif;
+$mainFont                : 'Tondo Corp', Helvetica, Arial, sans-serif;
 
 // Size
-$mainFontColor           : #101010;
-$mainFontSize            : 18px;
+$mainFontColor           : #515159;
+$mainFontSize            : 16px;
 $mainFontWeight          : 400;
-$mainLineHeight          : 1.4;
+$mainLineHeight          : 1.3;
 
-$desktopWidth            : 1280px;
+$desktopWideWidth        : 1440px;
+$desktopWidth            : 1140px;
 $smDesktopWidth          : 980px;
 $tableWidth              : 768px;
 $phoneWidth              : 480px;
 $smPhoneWidth            : 320px;
 
 // Main color
-$default-color           : #ffffff;
-$primary-color           : #444ce0;
-$success-color           : #26de81;
-$danger-color            : #fc5c65;
-$warning-color           : #fed330;
-$light-color             : #999999;
-$purple-color            : #8854d0;
+$default-white           : #ffffff;
+$default-black           : #000000;
+$default-gray            : #515159;
+$default-lightgray       : #dee2e9;
+$default-transparentgray : #a8a8ac;
+$main-bg                 : #f0f3f9;
+$default-yellow          : #fff8e7;
+$default-red             : #ff5c5c;
 
-// Neutral Color
-$neutral-primary         : #303133;
-$neutral-regular         : #606266;
-$neutral-secondary       : #909399;
-$neutral-placeholder     : #C0C4CC;
+$pag-gray                : #8a8b99;
+$input-gray              : #e5e8ef;
+$bg-gray                 : #f7f9fd;
+$dark-gray               : #d6dbe3;
+$neutral-gray            : #dee2e9;
+$bg-three-dots           : #c0c4cc;
+$options-gray            : #8a8c9b;
+$focus-color             : lightblue;
+$table-hover-gray        : #e9edf3;
+$table-hover-orange      : #ede6d4;
 
-// Border Color
-$border-base             : #DCDFE6;
-$border-light            : #E4E7ED;
-$border-lighter          : #EBEEF5;
-$border-lightex          : #F2F6FC;
+$transition              : all 200ms ease-out;
