--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -2,19 +2,17 @@ include ../utils/mixins
 block variables
 
 doctype html
-html(lang='en')
-  head
-    meta(charset='utf-8')
-    title #{title}
-    meta(name="description", content=description)
-    block head
+html(lang='ru')
+    head
+        meta(charset='utf-8')
+        title #{title}
+        meta(name="description", content=description)
+        block head
 
-  body(class=pageClass)
-    .wrapper
-      #app
+    body(class=pageClass)
         include ../includes/modules/header
         .content-wrapper
-          block content
+            block content
         include ../includes/modules/footer
 
-    block script
+        block script
